# package_homework

./: .gitignore  main.py  pyproject.toml
src/: mask.py  widget.py
